tests/textual/error/consByteString.uplc
(program 0.0.0 [ [ (builtin consByteString) (con unit ())] (con bytestring #) ])
